--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -28,6 +28,8 @@ $blue: #5600ff;
   border: 2px dotted $blue;
   color: $reddish;
   padding: 5px;
+  display: flex;
+  width: percentage(5 / 7);
 }
 
 .susy-test {
@@ -47,4 +49,21 @@ h1 {
 
 .border-radius {
   border-radius: 10px;
+}
+
+.is-active {
+  color: red;
+}
+
+.has-border {
+  border: 2px solid black;
+}
+
+/* uncss:ignore */
+.ignored-selector {
+  color: red;
+}
+
+.removed-selector {
+  color: blue;
 }
